--- a/QuiqBlog/Views/Shared/_LoginPartial.cshtml
+++ b/QuiqBlog/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link px-lg-3 py-3 py-lg-4" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @((await UserManager.GetUserAsync(User)).FirstName)!</a>
+        <a  class="nav-link px-lg-3 py-3 py-lg-4" asp-controller="Admin" asp-action="Index" title="Admin">Hello @((await UserManager.GetUserAsync(User)).FirstName)!</a>
     </li>
     <li class="nav-item">
         <a class="nav-link px-lg-3 py-3 py-lg-4" onclick="document.getElementById('logoutForm').submit();" style="cursor: pointer;">Logout</a>
