--- a/QuiqBlog/Views/Shared/Components/AdminSideNav/Default.cshtml
+++ b/QuiqBlog/Views/Shared/Components/AdminSideNav/Default.cshtml
@@ -5,9 +5,13 @@
 <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
     <div class="sb-sidenav-menu">
         <div class="nav">
-            <a class="nav-link"  asp-controller="Admin" asp-action="Index">
+            <a class="nav-link" asp-controller="Admin" asp-action="Index">
                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                 Dashboard
+            </a>
+            <a class="nav-link" asp-controller="Blog" asp-action="Create">
+                <div class="sb-nav-link-icon"><i class="fas fa-pen"></i></div>
+                Create Post
             </a>
         </div>
     </div>
