--- a/QuiqBlog/Views/Admin/Index.cshtml
+++ b/QuiqBlog/Views/Admin/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="container-fluid px-4">
-    <h1 class="mt-4">Dashboard</h1>
+    <h1 class="mt-4">Admin Dashboard</h1>
     <ol class="breadcrumb mb-4">
         <li class="breadcrumb-item active">Dashboard</li>
     </ol>
