--- a/QuiqBlog/Views/PostTranslation/Index.cshtml
+++ b/QuiqBlog/Views/PostTranslation/Index.cshtml
@@ -4,7 +4,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-controller="Post" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
